// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Piece moving with code A 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code B 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code C 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code K 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code N 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code P 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code R 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code a 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code b 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code c 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code k 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code n 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code p 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece moving with code r 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={1}
  moveY={2}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code A 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code B 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code C 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code K 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code N 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code P 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code R 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code a 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code b 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code c 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code k 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code n 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code p 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;

exports[`Piece with code r 1`] = `
<Styled(img)
  alt=""
  className="Piece"
  moveX={0}
  moveY={0}
  src={
    Object {
      "process": [Function],
    }
  }
/>
`;
